# stroke-api

./: Readme.md  pyproject.toml
api_avc/: pyproject.toml
stroke_api/: .pyproject.toml.swp  API_tuto.ipynb  API_tutoNew.ipynb  api.py  df_copy.csv  df_final_test  df_final_test.csv  filters.py  main.py  pyproject.toml  stroke_clean.csv
