[tool.poetry]
name = "stroke-api"
version = "0.1.0"
description = ""
authors = ["Marwa <marwa-aboulkasim@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
pandas = "^2.3.1"
streamlit = "^1.47.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
