[project]
name = "api-avc"
version = "0.1.0"
description = ""
authors = [
    {name = "Marwa",email = "marwa-aboulkasim@hotmail.fr"}
    {name = "Gaëtan",email = "gcourtieupro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "api_avc", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
