[tool.poetry]
name = "poetry init"
version = "0.1.0"
description = ""
authors = ["Marwa <marwa-aboulkasim@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.1"
plotly = "^6.2.0"
fastapi = {extras = ["standard"], version = "^0.116.1"}
streamlit = "^1.47.1"
matplot = "^0.1.9"


[tool.poetry.group.dev.dependencies]
notebook = "^7.4.5"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
